--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -51,12 +51,12 @@
                 "group": "g_in{{ ch_num }}"
             },
             {
-                "title": "Physical Value",
+                "title": "Physical Value Conversion",
                 "id": "gg_in{{ ch_num }}_p_value",
                 "group": "gg_in{{ ch_num }}_p"
             },
             {
-                "title": "Physical Value",
+                "title": "Physical Value Conversion",
                 "id": "gg_in{{ ch_num }}_n_value",
                 "group": "gg_in{{ ch_num }}_n"
             },
@@ -272,30 +272,66 @@
                 "default": 0,
                 "condition": "{{ format_list(ch_num, TYPES_WITH_GAIN, "in%s_type==%s") }}"
             },
+
+            {
+                "id": "in{{ ch_num }}_physical_value_scale",
+                "title": "Physical Value Scale",
+                "description": "physical_value_scale_description",
+                "group": "gg_in{{ ch_num }}_p_value",
+                "order": 1,
+                "readonly": true,
+                "enum": [1, 10, 100, 1000],
+                "enum_titles": [
+                    "x1: [-32768; 32766]",
+                    "x0.1: [-3276.8; 3276.6]",
+                    "x0.01: [-327.68; 327.66]",
+                    "x0.001: [-32.768; 32.766]"
+                ],
+                "default": 1,
+                "condition": "{{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_type==%s") }}"
+            },
+
+            {% for value_scale in [1, 10, 100, 1000] -%}
             {
                 "id": "in{{ ch_num }}_min",
                 "title": "Minimum value",
                 "description": "minimum_value_description",
                 "group": "gg_in{{ ch_num }}_p_value",
-                "order": 5,
+                "order": 2,
                 "address": "0x{{ "%x"|format(ch_num) }}408",
-                "min": -32768,
-                "max": 32767,
+                "min": {{ -32768 if value_scale == 1 else -32768 / value_scale }},
+                "max": {{ 32766 if value_scale == 1 else 32766 / value_scale }},
+                {% if value_scale != 1 -%}
+                "scale": {{ 1.0 / value_scale }},
+                {% endif -%}
                 "default": 0,
-                "condition": "{{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_type==%s") }}"
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_physical_value_scale=={{value_scale}})&&({{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_type==%s") }})"
             },
             {
                 "id": "in{{ ch_num }}_max",
                 "title": "Maximum value",
                 "description": "maximum_value_description",
                 "group": "gg_in{{ ch_num }}_p_value",
-                "order": 6,
+                "order": 3,
                 "address": "0x{{ "%x"|format(ch_num) }}40A",
-                "min": -32768,
-                "max": 32767,
-                "default": 10000,
-                "condition": "{{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_type==%s") }}"
+                "min": {{ -32768 if value_scale == 1 else -32768 / value_scale }},
+                "max": {{ 32766 if value_scale == 1 else 32766 / value_scale }},
+                {% if value_scale != 1 -%}
+                "scale": {{ 1.0 / value_scale }},
+                {% endif -%}
+                "default": {{ 10000 if value_scale == 1 else 10000 / value_scale }},
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_physical_value_scale=={{value_scale}})&&({{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_type==%s") }})"
             },
+            {% endfor -%}
+
             {
                 "id": "in{{ ch_num }}_hall_zero_offset",
                 "title": "Zero offset (A)",
@@ -574,30 +610,66 @@
                 "default": 0,
                 "condition": "{{ format_list(ch_num, TYPES_WITH_GAIN, "in%s_n_type==%s") }}"
             },
+
+            {
+                "id": "in{{ ch_num }}_n_physical_value_scale",
+                "title": "Physical Value Scale",
+                "description": "physical_value_scale_description",
+                "group": "gg_in{{ ch_num }}_n_value",
+                "order": 1,
+                "readonly": true,
+                "enum": [1, 10, 100, 1000],
+                "enum_titles": [
+                    "x1: [-32768; 32766]",
+                    "x0.1: [-3276.8; 3276.6]",
+                    "x0.01: [-327.68; 327.66]",
+                    "x0.001: [-32.768; 32.766]"
+                ],
+                "default": 1,
+                "condition": "{{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_type==%s") }}"
+            },
+
+            {% for value_scale in [1, 10, 100, 1000] -%}
             {
                 "id": "in{{ ch_num }}_n_min",
                 "title": "Minimum value",
                 "description": "minimum_value_description",
                 "group": "gg_in{{ ch_num }}_n_value",
-                "order": 5,
+                "order": 2,
                 "address": "0x{{ "%x"|format(ch_num) }}409",
-                "min": -32768,
-                "max": 32767,
+                "min": {{ -32768 if value_scale == 1 else -32768 / value_scale }},
+                "max": {{ 32766 if value_scale == 1 else 32766 / value_scale }},
+                {% if value_scale != 1 -%}
+                "scale": {{ 1.0 / value_scale }},
+                {% endif -%}
                 "default": 0,
-                "condition": "{{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_n_type==%s") }}"
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_n_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_n_physical_value_scale=={{value_scale}})&&({{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_n_type==%s") }})"
             },
             {
                 "id": "in{{ ch_num }}_n_max",
                 "title": "Maximum value",
                 "description": "maximum_value_description",
                 "group": "gg_in{{ ch_num }}_n_value",
-                "order": 6,
+                "order": 3,
                 "address": "0x{{ "%x"|format(ch_num) }}40B",
-                "min": -32768,
-                "max": 32767,
-                "default": 10000,
-                "condition": "{{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_n_type==%s") }}"
+                "min": {{ -32768 if value_scale == 1 else -32768 / value_scale }},
+                "max": {{ 32766 if value_scale == 1 else 32766 / value_scale }},
+                {% if value_scale != 1 -%}
+                "scale": {{ 1.0 / value_scale }},
+                {% endif -%}
+                "default": {{ 10000 if value_scale == 1 else 10000 / value_scale }},
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_n_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_n_physical_value_scale=={{value_scale}})&&({{ format_list(ch_num, TYPES_WITH_MIN_MAX, "in%s_n_type==%s") }})"
             },
+            {% endfor -%}
+
             {
                 "id": "in{{ ch_num }}_n_hall_zero_offset",
                 "title": "Zero offset (A)",
@@ -840,15 +912,22 @@
                 "group": "gg_in{{ ch_num }}_p_channels",
                 "condition": "in{{ ch_num }}_type==5632"
             },
+
+            {% for value_scale in [1, 10, 100, 1000] -%}
             {
                 "name": "IN {{ch_num}} Value",
                 "reg_type": "input",
                 "type": "value",
                 "format": "s16",
                 "error_value": "0x7fff",
+                "scale": {{ 1.0 / value_scale }},
                 "address": "0x{{ "%x"|format(ch_num) }}504",
                 "group": "gg_in{{ ch_num }}_p_channels",
-                "condition": "in{{ ch_num }}_type==5376"
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_physical_value_scale=={{value_scale}})&&(in{{ ch_num }}_type==5376)"
             },
             {
                 "name": "IN {{ch_num}} P Value",
@@ -856,10 +935,17 @@
                 "type": "value",
                 "format": "s16",
                 "error_value": "0x7fff",
+                "scale": {{ 1.0 / value_scale }},
                 "address": "0x{{ "%x"|format(ch_num) }}504",
                 "group": "gg_in{{ ch_num }}_p_channels",
-                "condition": "{{ format_list(ch_num, TYPES_WITH_SINGLE_VALUE_CHANNEL, "in%s_type==%s") }}"
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_physical_value_scale=={{value_scale}})&&({{ format_list(ch_num, TYPES_WITH_SINGLE_VALUE_CHANNEL, "in%s_type==%s") }})"
             },
+            {% endfor -%}
+
             {
                 "name": "IN {{ch_num}} N Resistance",
                 "type": "value",
@@ -972,16 +1058,25 @@
                 "condition": "in{{ ch_num }}_n_type==5632",
                 "group": "gg_in{{ ch_num }}_n_channels"
             },
+
+            {% for value_scale in [1, 10, 100, 1000] -%}
             {
                 "name": "IN {{ch_num}} N Value",
                 "reg_type": "input",
                 "type": "value",
                 "format": "s16",
                 "error_value": "0x7fff",
+                "scale": {{ 1.0 / value_scale }},
                 "address": "0x{{ "%x"|format(ch_num) }}505",
                 "group": "gg_in{{ ch_num }}_n_channels",
-                "condition": "{{ format_list(ch_num, TYPES_WITH_SINGLE_VALUE_CHANNEL, "in%s_n_type==%s") }}"
+                "condition": "(
+                    {%- if value_scale == 1 -%}
+                    isDefined(in{{ ch_num }}_n_physical_value_scale)==0||
+                    {%- endif -%}
+                    in{{ ch_num }}_n_physical_value_scale=={{value_scale}})&&({{ format_list(ch_num, TYPES_WITH_SINGLE_VALUE_CHANNEL, "in%s_n_type==%s") }})"
             },
+            {% endfor -%}
+
             {% endfor -%}
             {
                 "name": "5V Output",
@@ -1111,8 +1206,8 @@
                 "IN_P_title": "Channel P",
                 "IN_N_title": "Channel N",
                 "external_voltage_divider_description": "External voltage divider is used to measure voltage higher than 30V and to get higher input resistance. Output voltage of the divider should be in the range from 0 to 4V (better to 2V). Supported since firmware version 2.1.0.",
-                "minimum_value_description": "Physical value corresponding to lower limit of the measurement range. Integer in the range from -32768 to 32767. Choose dimension to provide required accuracy.",
-                "maximum_value_description": "Physical value corresponding to upper limit of the measurement range. Integer in the range from -32768 to 32767. Choose dimension to provide required accuracy."
+                "minimum_value_description": "Physical value corresponding to lower limit of the measurement range. Integer in the range from -32768 to 32766. Choose dimension to provide required accuracy.",
+                "maximum_value_description": "Physical value corresponding to upper limit of the measurement range. Integer in the range from -32768 to 32766. Choose dimension to provide required accuracy."
             },
             "ru": {
                 "template_title": "{{ title_ru }}",
@@ -1236,8 +1331,11 @@
                 "State": "Состояние",
                 "Minimum value": "Минимальное пересчитанное значение",
                 "Maximum value": "Максимальное пересчитанное значение",
-                "minimum_value_description": "Значение физической величины, соответствующее нижней границе диапазона измерения. Целое число в диапазоне от -32768 до 32767. Подберите размерность таким образом, чтобы обеспечить требуемую точность.",
-                "maximum_value_description": "Значение физической величины, соответствующее верхней границе диапазона измерения. Целое число в диапазоне от -32768 до 32767. Подберите размерность таким образом, чтобы обеспечить требуемую точность.",
+                "Physical Value Conversion": "Пересчет в физическую величину",
+                "Physical Value Scale": "Масштаб физической величины",
+                "physical_value_scale_description": "Выберите подходящий масштаб физической величины, чтобы получить требуемую точность.",
+                "minimum_value_description": "Значение физической величины, соответствующее нижней границе диапазона измерения активного датчика.",
+                "maximum_value_description": "Значение физической величины, соответствующее верхней границе диапазона измерения активного датчика.",
                 "Zero offset (A)" : "Сдвиг нуля (A)",
                 "Rated current (A)" : "Номинальный ток (A)",
                 "External voltage divider high-voltage arm (R1) resistance, kOhm" : "Сопротивление верхнего плеча (R1) внешнего делителя напряжения, кОм",
