--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -51,12 +51,12 @@
                 "group": "g_in{{ ch_num }}"
             },
             {
-                "title": "Conversion to Physical Value",
+                "title": "Conversion to physical value",
                 "id": "gg_in{{ ch_num }}_p_value",
                 "group": "gg_in{{ ch_num }}_p"
             },
             {
-                "title": "Conversion to Physical Value",
+                "title": "Conversion to physical value",
                 "id": "gg_in{{ ch_num }}_n_value",
                 "group": "gg_in{{ ch_num }}_n"
             },
@@ -1330,7 +1330,7 @@
                 "State": "Состояние",
                 "minimum_value_title": "Нижняя граница диапазона",
                 "maximum_value_title": "Верхняя граница диапазона",
-                "Conversion to Physical Value": "Пересчет в физическую величину",
+                "Conversion to physical value": "Пересчет в физическую величину",
                 "physical_value_scale_title": "Множитель шкалы",
                 "Zero offset (A)" : "Сдвиг нуля (A)",
                 "Rated current (A)" : "Номинальный ток (A)",
