use press_counter for buttons counters

--- a/templates/config-wb-mwac.json.jinja
+++ b/templates/config-wb-mwac.json.jinja
@@ -487,7 +487,7 @@
             {
                 "name": "Input {{ letter }}{{ in_num - in_num_offset}} Single Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{ 464 + (in_num - 1) }},
                 "type": "value",
                 "sporadic": true,
@@ -497,7 +497,7 @@
             {
                 "name": "Input {{ letter }}{{ in_num - in_num_offset }} Long Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{ 480 + (in_num - 1) }},
                 "type": "value",
                 "sporadic": true,
@@ -507,7 +507,7 @@
             {
                 "name": "Input {{ letter }}{{ in_num - in_num_offset }} Double Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{ 496 + (in_num - 1) }},
                 "type": "value",
                 "sporadic": true,
@@ -517,7 +517,7 @@
             {
                 "name": "Input {{ letter }}{{ in_num - in_num_offset }} Shortlong Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{ 512 + (in_num - 1) }},
                 "type": "value",
                 "sporadic": true,
