--- a/templates/config-wb-mwac.json.jinja
+++ b/templates/config-wb-mwac.json.jinja
@@ -275,7 +275,7 @@
             {% if not (i == 1 and out_num == OUT_NUM_CLEANING_MODE) -%}
             {% if i == 0 %}"in{{ in_num }}_out{{ out_num }}_actions": { {% else %}"in{{ in_num }}_out{{ out_num }}_actions_20min": { {% endif %}
                 "group": "gg_in{{ in_num }}_mapping_matrix_actions",
-                "title": {% if out_num == OUT_NUM_K1 %}"K1"{% elif out_num == OUT_NUM_K2 %}"K2"{% elif out_num == OUT_NUM_ALARM %}"Alarm"{% else %}"Cleaning Mode"{% endif %},
+                "title": {% if out_num == OUT_NUM_K1 %}"K1"{% elif out_num == OUT_NUM_K2 %}"K2"{% elif out_num == OUT_NUM_ALARM %}"\"Leakage\" Mode"{% else %}"Cleaning Mode"{% endif %},
                 "order": {{ out_num }},
                 "address": {{ 384 + ((in_num - 1) * 8) + (out_num - 1) }},
                 "reg_type": "holding",
@@ -362,7 +362,7 @@
             },
             {% for out_num in range(1, OUTPUTS_NUMBER) -%}
             "out{{ out_num }}_safe_state": {
-                "title": {%if out_num == OUT_NUM_ALARM %}"Alarm"{% else %}"K{{ out_num }}"{% endif %},
+                "title": {%if out_num == OUT_NUM_ALARM %}"\"Leakage\" Mode"{% else %}"K{{ out_num }}"{% endif %},
                 "group": "gg_outputs_safe_state",
                 "order": {{ out_num }},
                 "address": {{ 930 + (out_num - 1) }},
@@ -375,7 +375,7 @@
                 ]
             },
             "out{{ out_num }}_safety_behaviour": {
-                "title": {%if out_num == OUT_NUM_ALARM %}"Alarm"{% else %}"K{{ out_num }}"{% endif %},
+                "title": {%if out_num == OUT_NUM_ALARM %}"\"Leakage\" Mode"{% else %}"K{{ out_num }}"{% endif %},
                 "group": "gg_safety_behaviour",
                 "order": {{ out_num }},
                 "address": {{ 938 + (out_num - 1) }},
@@ -388,7 +388,7 @@
                 ]
             },
             "out{{ out_num }}_safety_input_control": {
-                "title": {%if out_num == OUT_NUM_ALARM %}"Alarm"{% else %}"K{{ out_num }}"{% endif %},
+                "title": {%if out_num == OUT_NUM_ALARM %}"\"Leakage\" Mode"{% else %}"K{{ out_num }}"{% endif %},
                 "group": "gg_safety_input_control",
                 "order": {{ out_num }},
                 "address": {{ 946 + (out_num - 1) }},
@@ -633,7 +633,9 @@
 
                 "Cleaning Mode": "\"Wet cleaning\" Mode",
                 "wet_cleaning_mode_description": "In the \"Wet cleaning\" mode, the module does not respond to leakage sensors. The mode is available starting from firmware version 1.21.0",
-                "wet_cleaning_mode_timer_description": "1 - 360 min"
+                "wet_cleaning_mode_timer_description": "1 - 360 min",
+
+                "Alarm": "\"Leakage\" Mode"
             },
             "ru": {
                 "WB-MWAC_template_title": "WB-MWAC (модуль контроля протечек и расхода воды )",
@@ -681,7 +683,8 @@
                 "P{{ lp_in_num }} Counter Offset": "Начальное значение счетчика P{{ lp_in_num }}",
                 {% endfor -%}
 
-                "Alarm": "Авария",
+                "\"Leakage\" Mode": "Режим \"Протечка\"",
+                "Alarm": "Режим \"Протечка\"",
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
                 "Input Voltage": "Напряжение питания",
