--- a/templates/config-breezart-lux.json.jinja
+++ b/templates/config-breezart-lux.json.jinja
@@ -696,6 +696,7 @@
 
         "translations": {
             "en": {
+                "template_title": "Breezart Lux/Aqua",
                 "air_handling_unit_status": "Air Handling Unit Status",
                 "error_code": "Error Code",
                 "warning_code": "Warning Code",
@@ -758,7 +759,7 @@
                 "available_humidifier": "Humidifier is Available"
             },
             "ru": {
-                "template_title": "Breezart Lux (SB)",
+                "template_title": "Breezart Lux/Aqua",
                 "Mode": "Режим",
                 "Setpoint": "Уставки",
                 "Inputs": "Входы",
